# makepad_image_manipulation

./: Cargo.toml  README.md  android.sh
benchmark_comparisons/flutter/: README.md  pubspec.yaml
benchmark_comparisons/flutter/android/app/: build.gradle
benchmark_comparisons/flutter/android/app/src/main/: AndroidManifest.xml
benchmark_comparisons/flutter/ios/Runner/: Info.plist
benchmark_comparisons/flutter/ios/Runner.xcodeproj/: project.pbxproj
benchmark_comparisons/flutter/lib/: main.dart
benchmark_comparisons/flutter/linux/: CMakeLists.txt
benchmark_comparisons/flutter/macos/Runner.xcodeproj/: project.pbxproj
benchmark_comparisons/flutter/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
benchmark_comparisons/flutter/macos/Runner/Configs/: AppInfo.xcconfig
benchmark_comparisons/flutter/test/: widget_test.dart
benchmark_comparisons/flutter/web/: index.html
benchmark_comparisons/flutter/windows/: CMakeLists.txt
benchmark_comparisons/flutter/windows/runner/: Runner.rc  main.cpp
benchmark_comparisons/native/: .gitignore  settings.gradle
benchmark_comparisons/native/app/: build.gradle
benchmark_comparisons/native/app/src/androidTest/java/com/example/jetpack_compose_image_manipulation/: ExampleInstrumentedTest.kt
benchmark_comparisons/native/app/src/main/: AndroidManifest.xml
benchmark_comparisons/native/app/src/main/res/values/: strings.xml  themes.xml
benchmark_comparisons/native/gradle/wrapper/: gradle-wrapper.properties
src/: app.rs  image.rs  image_box.rs  image_grid.rs  lib.rs  main.rs
(+6 files in other folders)
